# lars_light

./: CMakeLists.txt  README.md  cholesky.h  dense_cholesky.h  dense_lars_data.h  func_list.txt  lars.h  lars_interface.h  mathOperations.cpp  mathOperations.h  measure.cpp  replacementToBlasFunctions.c  replacementToC.c  test.cpp  testlars.cpp  util.h
report/: bibl_conf.bib  main.tex  report.aux  report.tex
report/sec/: abstract.tex  background.tex  conclusions.tex  experiment.tex  introduction.tex  method.tex
src/: cholesky.h  lars.cpp  lars.h  mathOperations.cpp  mathOperations.h  timer.h  timer_id.h  util.h
